--- a/Question_6.ipynb
+++ b/Question_6.ipynb
@@ -185,13 +185,15 @@
     }
    ],
    "source": [
-    "# Filter data for Doubtful and Inactive players\n",
+    "#Does the amount of players out vs questionable change as\n",
+    "\n",
+    "# Filter data for out and questionable\n",
     "filtered_df = df[df[\"Injury Status\"].isin([\"Out\", \"Questionable\"])]\n",
     "\n",
-    "# Group by Season Year and Week and count the Injury Status\n",
+    "# Group by Week and count the Injury Status\n",
     "count_df = filtered_df.groupby([\"Week\", \"Injury Status\"]).size().unstack(fill_value=0)\n",
     "\n",
-    "\n",
+    "#plot\n",
     "count_df.plot(kind=\"bar\", stacked=True)\n",
     "plt.title(\"Injury Status Out vs Questionable Each Week\")\n",
     "plt.xlabel(\"Week\")\n",
@@ -226,7 +228,7 @@
     "# Group by Injury Status and count the number of players\n",
     "count_df = filtered_df.groupby(\"Injury Status\").size()\n",
     "\n",
-    "# Plot the data\n",
+    "# Plot\n",
     "count_df.plot(kind=\"bar\")\n",
     "plt.title(\"Number of Players Doubtful vs Out For the Season\")\n",
     "plt.xlabel(\"Injury Status\")\n",
