--- a/Question_4.ipynb
+++ b/Question_4.ipynb
@@ -12,12 +12,12 @@
     "import requests\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "id": "e061a21b-bf9d-48f2-b427-bdb902c04141",
    "metadata": {
     "tags": []
@@ -161,7 +161,7 @@
        "4  Did Not Participate In Practice     Illness  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "c5a7c54a-acde-4294-b70c-4717663f8035",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
        "60"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "9f9b32e2-ff4c-4fe5-93c4-91def798042a",
    "metadata": {
     "tags": []
@@ -220,7 +220,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "b73d5c7e-564a-490d-8718-2b80fc7d8f5f",
    "metadata": {
     "tags": []
@@ -377,7 +377,7 @@
        "5  Limited Participation In Practice       Ankle  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "cf3362ab-acf6-4569-8ea4-9fd10be12f9e",
    "metadata": {
     "tags": []
@@ -415,7 +415,7 @@
        "48"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "23f0dfe3-7eaa-4b60-a2cf-ec29fb3381dc",
    "metadata": {
     "tags": []
@@ -447,7 +447,7 @@
        "       'Ankle/Elbow', 'Tooth', 'Tibia'], dtype=object)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "3106587e-fa32-4e5b-b51b-8a3cc67224d8",
    "metadata": {
     "tags": []
@@ -478,7 +478,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "b969b03e-b4cf-4d45-8b65-78f9f7dacd11",
    "metadata": {
     "tags": []
@@ -509,7 +509,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "5e4e37e8-9b2d-46d1-aaef-de3f6961d939",
    "metadata": {
     "tags": []
@@ -547,7 +547,7 @@
        "39"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "75f25759-b6ee-4e2d-90e5-1cae31c1858d",
    "metadata": {
     "tags": []
@@ -636,7 +636,7 @@
        "4        C  Concussion      1"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "id": "25e67c7a-4462-4686-8a67-58ba2dafdb34",
    "metadata": {
     "tags": []
@@ -728,19 +728,21 @@
        "99       DT  Concussion      1"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# get a dataframe to pull specifically concussions by position\n",
+    "\n",
     "concussion_risk_by_positions = injury_counts_by_position[injury_counts_by_position['Injury Type'] == 'Concussion']\n",
     "concussion_risk_by_positions.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 25,
    "id": "a7838cc6-cb1a-47f2-af78-37e413394244",
    "metadata": {
     "tags": []
@@ -758,6 +760,8 @@
     }
    ],
    "source": [
+    "# plot data with a piechart to best show distribution\n",
+    "\n",
     "positions = concussion_risk_by_positions.groupby('Position')['Count'].sum().index\n",
     "counts = concussion_risk_by_positions.groupby('Position')['Count'].sum().values\n",
     "\n",
@@ -784,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 31,
    "id": "550e2d34-7700-494c-a0cd-fc7da118544a",
    "metadata": {},
    "outputs": [
@@ -800,19 +804,21 @@
        "Name: Count, dtype: int64"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Identify top 5 positions with highest concussion counts\n",
+    "\n",
     "top_5_positions = concussion_risk_by_positions.groupby('Position')['Count'].sum().nlargest(5)\n",
     "top_5_positions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 47,
    "id": "108082bb-a492-4112-b456-c494e62c8060",
    "metadata": {
     "tags": []
@@ -882,12 +888,14 @@
        "4       OL      9"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# converting to dataframe for better visual\n",
+    "\n",
     "top_5_positions = concussion_risk_by_positions.groupby('Position')['Count'].sum().nlargest(5).reset_index(name='Count')\n",
     "top_5_positions"
    ]
@@ -896,6 +904,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cc3272fa-196a-4935-ab97-8112ccdf708f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffd47063-3973-4ea8-ba28-525607948c24",
    "metadata": {},
    "outputs": [],
    "source": []
